# james-the-butler

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  Makefile  README.md  docker-compose.yml  implementation-plan.md
.claude/: launch.json
.claude/skills/: dream.md
.github/workflows/: pipeline.yml
assets/logo-concepts/: grid.html
backend/: .dockerignore  .gitignore  Dockerfile  mix.exs
backend/config/: config.exs  dev.exs  prod.exs  test.exs
backend/lib/: james.ex
backend/spec/: README.md
backend/test/: james_test.exs  test_helper.exs
cli/: .credo.exs  .gitignore  mix.exs
docs/: .gitignore  index.md  package-lock.json  package.json
frontend/: .gitignore  Dockerfile  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/src/: main.rs
mobile/: .gitignore  pubspec.yaml
spec/: README.md  api.md  architecture.md  chrome-extension.md  database.md  elixir.md  flutter.md  office-addins.md  pipeline.md  platform.md  security.md  vue.md  webrtc.md
tools/pipeline_runner/: .gitignore  pyproject.toml
tools/pipeline_runner/spec/: README.md
tools/pipeline_runner/src/pipeline_runner/: __init__.py  cli.py  pipeline.py
tools/pipeline_runner/src/pipeline_runner/github/: __init__.py  client.py  workflow.py
tools/pipeline_runner/src/pipeline_runner/stages/: __init__.py  archgate.py  base.py  build.py  deploy.py  lint.py  test.py
tools/pipeline_runner/tests/: conftest.py  test_archgate.py  test_cli.py  test_github.py  test_pipeline.py  test_stages.py
(+494 files in other folders)
