[tool.poetry]
name = "pipeline-runner"
version = "0.1.0"
description = "CI/CD pipeline orchestration tool for James the Butler"
license = "MIT"
readme = "spec/README.md"
packages = [{include = "pipeline_runner", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1"
pyyaml = "^6.0"
pygithub = "^2.2"
rich = "^13.7"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1"
pytest-cov = "^5.0"
ruff = "^0.3"
mypy = "^1.9"

[tool.poetry.scripts]
pipeline-runner = "pipeline_runner.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
